--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
 	<link rel="stylesheet" href="resources/css/index.css">
 
 	<head>
-		<title>Title</title>
+		<title>Scott Haugaard Portfolio</title>
 		<!-- Required meta tags -->
 		<meta charset="utf-8" />
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1, shrink-to-fit=no"
-		/>
+		<meta name="viewport" content="width=device-width initial-scale=1, shrink-to-fit=no" />
 
 		<!-- Bootstrap CSS v5.2.1 -->
 		<link
@@ -26,7 +23,11 @@
 		</header>
 
 
-		<main></main>
+		<main>
+			
+			<p>Hello World</p>
+		
+		</main>
 
 
 		
