--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
 	<title>Scott Haugaard Portfolio</title>
+	<!-- Required meta tags -->
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width initial-scale=1" />
 	<link rel="stylesheet" href="resources/css/bootstrap.min.css">
 	<link rel="stylesheet" href="resources/css/index.css">
+
 	<link rel="icon" type="image/svg" href="resources/images/favicon.svg"> 
 </head>
 <body>
