--- a/basic.html
+++ b/basic.html
@@ -2,30 +2,32 @@
 <html lang="en">
 <head>
 	<title>Scott Haugaard Portfolio</title>
+	<!-- Required meta tags -->
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width initial-scale=1" />
-	<link rel="stylesheet" href="resources/css/bootstrap.min.css">
 	<link rel="stylesheet" href="resources/css/index.css">
+	<link rel="stylesheet" href="resources/css/bootstrap.min.css">
 	<link rel="icon" type="image/svg" href="resources/images/favicon.svg"> 
 </head>
 <body>
+
 <header>
-	<!-- place navbar here -->
+	<nav>
+		<!-- Place Navbar Here -->
+	</nav>
 </header>
+
+<div class="container-fluid">
 
 <main>
 	<div class="container">
 
-	<h1>Everything is&nbspArt!</h1>
-		<p>Design, Color, and Composition are everywhere we look. Whether it has been carefully curated, or stumbling upon simple beauty. 
-		<br>This is a collection of my visual art ..
-		</p>
-	<hr/>	
-	<h2>Portfolio</h2>
-
+	<!-- Main Content Here -->
 
 	</div>
 </main>
+
+</div><!-- End Container-Fluid -->
 
 <footer>
 	<!-- Place Footer Here -->
@@ -35,4 +37,3 @@
 <script	src="resources/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-		
