deleted:    Untitled-1.html 	modified:   index.html 	modified:   resources/css/index.css 	new file:   resources/fonts/aachen.otf 	modified:   resources/images/chain.png 	new file:   resources/images/chain2.png 	new file:   resources/images/chainBlack.png 	new file:   resources/images/chainFlat.png 	new file:   resources/js/index.js

--- a/index.html
+++ b/index.html
@@ -9,15 +9,43 @@
 	<link rel="icon" type="image/svg" href="resources/images/favicon.svg"> 
 </head>
 <body>
+
+
+
 <header>
-	<!-- place navbar here -->
-</header>
+	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+		<div class="container-fluid">
+		  <a class="navbar-brand" href="#">Doberman on Graphics</a>
+		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarCollapse">
+			<ul class="navbar-nav me-auto mb-2 mb-md-0">
+			  <li class="nav-item">
+				<a class="nav-link active" aria-current="page" href="#">Home</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="#">Link</a>
+			  </li>
+			  
+			</ul>
+		  </div>
+		</div>
+	  </nav></header>
+
+<div class="chain">
+<div class="container-fluid">
+
+<!-- Change top to adjust position. 
+Change CSS to make it disappear -->
+<div style="top: 100px;" id="viewport-size"></div>
+
 
 <main>
 	<div class="container">
 
 	<h1>Everything is&nbspArt!</h1>
-		<p>Design, Color, and Composition are everywhere we look. Whether it has been carefully curated, or stumbling upon simple beauty. 
+		<p>Design, Color, and Composition are everywhere we look. Whether it has been carefully curated, or stumbling upon simple beauty. 	
 		<br>This is a collection of my visual art ..
 		</p>
 	<hr/>	
@@ -26,6 +54,9 @@
 
 	</div>
 </main>
+
+</div><!-- End Container-Fluid -->
+</div><!-- End Chain -->
 
 <footer>
 	<!-- Place Footer Here -->
