--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title>Scott Haugaard Portfolio</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width initial-scale=1" />
-	<link rel="stylesheet" href="resources/css/bootstrap.min.css">
-	<link rel="stylesheet" href="resources/css/index.css">
+	<link rel="stylesheet" href="./resources/css/bootstrap.min.css">
+	<link rel="stylesheet" href="./resources/css/index.css">
 	<link rel="icon" type="image/svg" href="resources/images/favicon.svg"> 
 </head>
 <body>
@@ -33,7 +33,6 @@
 		</div>
 	  </nav></header>
 
-<div class="chain">
 <div class="container-fluid">
 
 <!-- Change top to adjust position. 
@@ -56,14 +55,13 @@ Change CSS to make it disappear -->
 </main>
 
 </div><!-- End Container-Fluid -->
-</div><!-- End Chain -->
 
 <footer>
 	<!-- Place Footer Here -->
 </footer>
 
-<script	src="resources/js/index.js"></script>
-<script	src="resources/js/bootstrap.bundle.min.js"></script>
+<script	src="./resources/js/index.js"></script>
+<script	src="./resources/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 		
