--- a/index.html
+++ b/index.html
@@ -10,28 +10,40 @@
 </head>
 <body>
 
-
-
 <header>
-	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+	<div id="navbar-container">
+	<nav id="navbar" class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 		<div class="container-fluid">
-		  <a class="navbar-brand" href="#">Doberman on Graphics</a>
+		  <a class="navbar-brand" href="index.html">Doberman on Graphics</a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		  </button>
 		  <div class="collapse navbar-collapse" id="navbarCollapse">
 			<ul class="navbar-nav me-auto mb-2 mb-md-0">
-			  <li class="nav-item">
-				<a class="nav-link active" aria-current="page" href="#">Home</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="#">Link</a>
-			  </li>
-			  
+				<li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="index.html">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Design</a>
+				</li>			  
+				<li class="nav-item">
+					<a class="nav-link" href="#">Branding</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Illustration</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Photography</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">About Me</a>
+				</li>
 			</ul>
 		  </div>
 		</div>
-	  </nav></header>
+	</nav>
+	</div>
+</header>
 
 <div class="container-fluid">
 
@@ -49,6 +61,10 @@ Change CSS to make it disappear -->
 		</p>
 	<hr/>	
 	<h2>Portfolio</h2>
+
+
+
+	<div style="height: 500rem;"></div>
 
 
 	</div>
