modified:   index.html

--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@
 
 <!-- Change top to adjust position. 
 Change CSS to make it disappear -->
-<div style="top: 100px;" id="viewport-size"></div>
+<div style="top: 150px; right: 40px;" id="viewport-size"></div>
 
 
 <main>
+
+	<div class="headspace"></div>
+
 	<div class="container">
 
 	<h1>Everything is&nbspArt!</h1>
@@ -62,7 +65,9 @@ Change CSS to make it disappear -->
 	<hr/>	
 	<h2>Portfolio</h2>
 
+		<p>
 
+		</p>
 
 	<div style="height: 500rem;"></div>
 
