--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>Scott Haugaard Portfolio</title>
+	<title>DoG - Home</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width initial-scale=1" />
 	<link rel="stylesheet" href="./resources/css/bootstrap.min.css">
@@ -14,7 +14,7 @@
 	<div id="navbar-container">
 	<nav id="navbar" class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 		<div class="container-fluid">
-		  <a class="navbar-brand" href="index.html">Doberman on Graphics</a>
+		  <a class="navbar-brand" href="index.html"><img src="resources/images/DOGlogo.svg" alt=""></a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		  </button>
@@ -36,7 +36,7 @@
 					<a class="nav-link" href="#">Photography</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">About Me</a>
+					<a class="nav-link" href="#">About</a>
 				</li>
 			</ul>
 		  </div>
@@ -49,7 +49,7 @@
 
 <!-- Change top to adjust position. 
 Change CSS to make it disappear -->
-<div style="top: 150px; right: 40px;" id="viewport-size"></div>
+<div style="top: 80px; right: 60px;" id="viewport-size"></div>
 
 
 <main>
@@ -58,18 +58,23 @@ Change CSS to make it disappear -->
 
 	<div class="container">
 
-	<h1>Everything is&nbspArt!</h1>
+	<h1><span style="vertical-align: text-top;">&#161;</span>&nbspEverything is&nbspArt
+		<br><span class="hide">&nbsp;&nbsp;</span>Art&nbspis Everything&nbsp<span>!</span>
+
+	</h1>
 		<p>Design, Color, and Composition are everywhere we look. Whether it has been carefully curated, or stumbling upon simple beauty. 	
 		<br>This is a collection of my visual art ..
 		</p>
 	<hr/>	
 	<h2>Portfolio</h2>
 
+
+
+	<div class="dog">DOG</div>
 		<p>
 
 		</p>
 
-	<div style="height: 500rem;"></div>
 
 
 	</div>
