new file:   design.html 	modified:   index.html 	modified:   resources/css/index.css 	modified:   resources/js/index.js 	new file:   sandbox.html

--- a/index.html
+++ b/index.html
@@ -11,55 +11,23 @@
 <body>
 
 <header>
-	<div id="navbar-container">
-	<nav id="navbar" class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-		<div class="container-fluid">
-		  <a class="navbar-brand" href="index.html"><img src="resources/images/DOGlogo.svg" alt=""></a>
-		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		  </button>
-		  <div class="collapse navbar-collapse" id="navbarCollapse">
-			<ul class="navbar-nav me-auto mb-2 mb-md-0">
-				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="index.html">Home</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Design</a>
-				</li>			  
-				<li class="nav-item">
-					<a class="nav-link" href="#">Branding</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Illustration</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Photography</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">About</a>
-				</li>
-			</ul>
-		  </div>
-		</div>
-	</nav>
-	</div>
+	<site-header>
+		<!-- Navbar -->
+	</site-header>
 </header>
 
 <div class="container-fluid">
 
 <!-- Change top to adjust position. 
 Change CSS to make it disappear -->
-<div style="top: 80px; right: 60px;" id="viewport-size"></div>
-
+<div style="top: 100px; right: 60px;" id="viewport-size"></div>
 
 <main>
 
-	<div class="headspace"></div>
-
 	<div class="container">
 
-	<h1><span style="vertical-align: text-top;">&#161;</span>&nbspEverything is&nbspArt
-		<br><span class="hide">&nbsp;&nbsp;</span>Art&nbspis Everything&nbsp<span>!</span>
+	<h1><span class="tik">&#161;</span>&nbspEverything is&nbspArt
+		<br><span class="hide">&nbsp;&nbsp;</span>Art&nbspis Everything&nbsp<span class="tik">!</span>
 
 	</h1>
 		<p>Design, Color, and Composition are everywhere we look. Whether it has been carefully curated, or stumbling upon simple beauty. 	
@@ -69,21 +37,14 @@ Change CSS to make it disappear -->
 	<h2>Portfolio</h2>
 
 
-
-	<div class="dog">DOG</div>
-		<p>
-
-		</p>
-
-
-
-	</div>
 </main>
 
 </div><!-- End Container-Fluid -->
 
 <footer>
-	<!-- Place Footer Here -->
+	<div>&copy;<span id="Year"></span> Doberman on Graphics</div>
+	<div>Los Angeles (626) 325-8182</div>
+	<div>San Diego (760) 456-9091</div>
 </footer>
 
 <script	src="./resources/js/index.js"></script>
