modified:   index.html 	modified:   resources/css/index.css 	new file:   resources/fonts/AlfaSlabOne-Regular.ttf 	deleted:    resources/fonts/Neue Aachen W04 Black.otf

--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@ Change CSS to make it disappear -->
 
 </div><!-- End Container-Fluid -->
 
+
+
 <footer>
-	<div>&copy;<span id="Year"></span> Doberman on Graphics</div>
-	<div>Los Angeles (626) 325-8182</div>
-	<div>San Diego (760) 456-9091</div>
+	<div>©<span id="year"></span> Doberman on Graphics</div>
+	<div>(626) 325-8182 Los Angeles X San Diego (760) 456-9091</div>
 </footer>
 
 <script	src="./resources/js/index.js"></script>
