modified:   design.html 	modified:   index.html 	modified:   resources/css/index.css 	modified:   resources/js/index.js

--- a/design.html
+++ b/design.html
@@ -12,6 +12,7 @@
 
 <header>
 	<site-header>
+		<!-- Navbar -->
 	</site-header>
 </header>
 
@@ -106,9 +107,9 @@
 </div><!-- End Container-Fluid -->
 
 <footer>
-	<div>&copy;<span id="Year"></span> Doberman on Graphics</div>
-	<div>Los Angeles (626) 325-8182</div>
-	<div>San Diego (760) 456-9091</div>
+	<site-footer>
+		<!-- Footer -->
+	</site-footer>
 </footer>
 
 <script	src="./resources/js/index.js"></script>
