--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@ Change CSS to make it disappear -->
 
 
 <footer>
-	<div>©<span id="year"></span> Doberman on Graphics</div>
-	<div>(626) 325-8182 Los Angeles X San Diego (760) 456-9091</div>
+	<site-footer>
+		<!-- Footer -->
+	</site-footer>
 </footer>
 
 <script	src="./resources/js/index.js"></script>
