--- a/branding.html
+++ b/branding.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>DoG - Home</title>
+	<title>Branding - DoG</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width initial-scale=1" />
 	<link rel="stylesheet" href="./resources/css/bootstrap.min.css">
@@ -22,16 +22,156 @@
 
 <main>
 
-	<div class="container">
-
-	<h1>XXXXXXX</h1>
-
-		<p>
-			
-		</p>
-		
-
+<div class="top-container">
+	<div class="top-grid">
+		<div class="grid1">1</div>
+		<div>2</div>
+		<div class="grid3">3</div>
+		<div>4</div>
+		<div>5</div>
+		<div>6</div>
+		<div class="grid7">7</div>
+		<div>8</div>
+		<div class="grid9">9</div>
 	</div>
+	<div class="top-text">
+		<h1>Branding</h1>
+
+<p>	
+Branding can convey the core focus, or the breadth of and industry, and the culture and attitude in a retail or service environment.
+</p>
+<p>
+It attracts through connection in attituded or  
+</p>
+<p>
+A powerful tool that communicates information and builds a relationship with the consumer. 
+</p>
+<p>
+Good design is inviting, and steers outward perception by projecting an esthetic that leaves an impression.
+</p>
+<p>
+A well thought-out logo reproduces properly through a variety of different media. 
+</p>
+<p>
+Most of these designs are custom letterforms, created for a specific application, and have been published.
+</p>
+<p>
+Typography has always been an interest of mine, well before my career in the graphic arts industry. I'm the type of guy that can stare at a menu for twenty minutes, and not know what to order because I wasn't actually reading it, or rewind just the end credits of a movie. I am part of the Letraset generation, and born with an Xacto blade in one hand and a Sharpie in the other. 
+</p>
+	</div>
+</div>
+
+
+
+	<h1>Branding</h1>
+
+<p>	
+Branding can convey the core focus, or the breadth of and industry, and the culture and attitude in a retail or service environment.
+</p>
+<p>
+It attracts through connection in attituded or  
+</p>
+<p>
+A powerful tool that communicates information and builds a relationship with the consumer. 
+</p>
+<p>
+Good design is inviting, and steers outward perception by projecting an esthetic that leaves an impression.
+</p>
+<p>
+A well thought-out logo reproduces properly through a variety of different media. 
+</p>
+<p>
+Most of these designs are custom letterforms, created for a specific application, and have been published.
+</p>
+<p>
+Typography has always been an interest of mine, well before my career in the graphic arts industry. I'm the type of guy that can stare at a menu for twenty minutes, and not know what to order because I wasn't actually reading it, or rewind just the end credits of a movie. I am part of the Letraset generation, and born with an Xacto blade in one hand and a Sharpie in the other. 
+</p>
+
+<h2>Doberman on Graphics (DoG)</h2>
+<p>
+	This was the header of my original portfolio site.
+</p>
+<p>
+	The elongated letterform run together, to echo the chain. The red favicon has a bite out of the corner, mimicking the folded corner of a document icon. 
+</p>
+
+<h2>Tamale Festival</h2>
+<p>
+	This design utilizes chili peppers and corn husks to form the letters, with arched type symbolizing the sun. The use of green and red are ties to the Mexican flag, the Hispanic nature of our local community, and of the festival itself.
+</p>
+<p>
+Done as a entry into a design competition, which won from a field of over two hundred submissions. It was turned into an official postage cancellation mark for the Indio Post Office, during the month of December. 
+</p>
+<p>
+	The logo was retired last year, after a nearly twenty year run. The festival has been turned over to a production company, and their new logo sucks!
+</p>
+
+<h2>Threee Books</h2>
+<p>
+	This was done for my bookstore in Old Town Pasadena, in the backroom of The Espresso Bar. The thinking was that these books themselves were, at the very least, third-hand, and how to exaggerate that.
+	The tag line was: "One to Threee for Books".  
+</p>
+<p>
+	Done in appreciation of old-style numerals. The number is implied by the triangles, and the visual void of the number. Reinforcing of the name of the bookstore, called "Threee". The color used is that of roasted coffee, and the extra "e" also represents the coffee from The Espresso Bar. Triple shot !
+</p>
+
+<h2>Desert Radio Group</h2>
+<p>
+	The five antennae represent the five broadcasts coverage areas. The hills show the actual valley pass. Concentric rings echo the physical radio waves, in a blue sky. 
+</p>
+<p>
+	The cities listed below are the five markets they serve.  After the deregulation of the industry, the Morris Publishing Group bought many stations a few of which were my clients. 
+</p>
+
+<h2>GaärD</h2>
+<p>	
+	This was developed for an umbrella corporation to encompass all other operations. Extensions of the terminal letters create a physical boundary, that implies the protective function of the entity.
+</p>
+<p>
+	The umlaut invokes the Old Norse origin of the family name. Though not grammatically correct, it works phonetically, and included for affect. 
+</p>
+
+<h2>MAGnet Gallery</h2>
+<p>	
+	MAGnet (Miles Avenue Gallery Network) was a non-profit community based exhibit space, run by an all volunteer staff of artists and community leaders. I was an original founder and board member, and appointed as the Art Director. 
+</p>
+<p>
+	The letterforms are based the classic horse-shoe shaped magnet. Walking in the Seattle rain, I stopped in my tracks, as the letterforms revealed themselves, starting with the letter "n". 
+</p>
+<p>
+	I also provided all printed collateral and promotional material, at no charge. 
+</p>
+
+<h2>Little Giant Printers</h2>
+<p>
+	This updated design for Little Giant Printers. The bevel and highlight effects create a three-dimensional appearance which is emphasized by the drop-shadow. 
+</p>
+<p>
+	It was produced as a four spot-color job on Solar White 110# Classic Laid, to produce specific shades of red, green and blue, though the logo also works well in full-color. Separate single-color and greyscale versions were developed for marketing purposes. 
+</p>
+<p>
+	My original logo for Little Giant. The letterforms reflect the mechanics of a printing press. Plate, impression, water and ink delivery rollers. This design is one of my first computer graphics, done on a Mac SE.
+</p>
+<br>
+
+<h2>Molokaʻi Partners</h2>
+<p>
+	The letterforms invoke a polynesian theme and is similar to early Hawaiian petroglyphs signifying a boat sail. The same basic shape is repeated to create the primitive feel of cuneiform based writing. The color and texture are meant to reflect roasted coffee and the burlap sack in which beans are packaged for wholesale.  
+</p>
+<p>
+	This design was done for a start-up coffee company on Molokai. Because of the overwhelming market presence of Kona Coffee, there were no significant farms on other islands. The land use for sugar and pineapple had become less profitable and this successful plantation was soon brought under the corporate umbrella of Coffees of Hawaii.
+</p>
+
+<h2>In Like Flint</h2>
+<p>
+	This is the evil secret-society from the "Flint" series of spy movies, filmed in the sixties. 
+</p>
+<p>
+	This is my interpretation of the logo, with original type treatment. This became an embroidered patch, for my young nephew with the same name. 
+</p>
+		
+<br><br>
+
 </main>
 
 </div><!-- End Container-Fluid -->
