--- a/design.html
+++ b/design.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>DoG - Home</title>
+	<title>Design - DoG</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width initial-scale=1" />
 	<link rel="stylesheet" href="./resources/css/bootstrap.min.css">
