--- a/photography.html
+++ b/photography.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>About - DoG</title>
+	<title>Photography - DoG</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width initial-scale=1" />
 	<link rel="stylesheet" href="./resources/css/bootstrap.min.css">
@@ -18,30 +18,23 @@
 
 <div class="container-fluid">
 
-<!-- Change top to adjust position. 
-Change CSS to make it disappear -->
-<div style="top: 100px; right: 60px;" id="viewport-size"></div>
+<div id="viewport-size"></div>
 
 <main>
 
 	<div class="container">
 
-	<h1><span class="tik">&#161;</span>&nbspEverything is&nbspArt
-		<br><span class="hide">&nbsp;&nbsp;</span>Art&nbspis Everything&nbsp<span class="tik">!</span>
+	<h1>Photography</h1>
 
-	</h1>
-		<p>Design, Color, and Composition are everywhere we look. Whether it has been carefully curated, or stumbling upon simple beauty. 	
-		<br>This is a collection of my visual art ..
+		<p>
+			
 		</p>
-	<hr/>	
-	<h2>Portfolio</h2>
+		
 
-
+	</div>
 </main>
 
 </div><!-- End Container-Fluid -->
-
-
 
 <footer>
 	<site-footer>
