--- a/sandbox.html
+++ b/sandbox.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>DoG - Sandbox</title>
+	<title>Sandbox - DoG</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width initial-scale=1" />
 	<link rel="stylesheet" href="./resources/css/bootstrap.min.css">
@@ -10,56 +10,27 @@
 </head>
 <body>
 
-<header>
-	<div id="navbar-container">
-	<nav id="navbar" class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-		<div class="container-fluid">
-		  <a class="navbar-brand" href="index.html"><img src="resources/images/DOGlogo.svg" alt=""></a>
-		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		  </button>
-		  <div class="collapse navbar-collapse" id="navbarCollapse">
-			<ul class="navbar-nav me-auto mb-2 mb-md-0">
-				<li class="nav-item">
-					<a class="nav-link active" href="sandbox.html">Sandbox</a>
-				</li>
-			</ul>
-		  </div>
-		</div>
-	</nav>
-	</div>
-</header>
+	<header>
+		<site-header>
+			<!-- Navbar -->
+		</site-header>
+	</header>
 
 <div class="container-fluid">
 
-<!-- Change top to adjust position. 
-Change CSS to make it disappear -->
-<div style="top: 80px; right: 60px;" id="viewport-size"></div>
-
+	<div id="viewport-size"></div>
 
 <main>
-
-	<div class="headspace"></div>
-
 	<div class="container">
 
-	<h1><span style="vertical-align: text-top;">&#161;</span>&nbspEverything is&nbspArt
-		<br><span class="hide">&nbsp;&nbsp;</span>Art&nbspis Everything&nbsp<span>!</span>
 
-	</h1>
-		<p>Design, Color, and Composition are everywhere we look. Whether it has been carefully curated, or stumbling upon simple beauty. 	
-		<br>This is a collection of my visual art ..
-		</p>
-	<hr/>	
-	<h2>Portfolio</h2>
+<h3>
+	Xacto Blade
+</h3>
 
+<br>
 
-
-	<div class="dog">DOG</div>
-		<p>
-
-		</p>
-
+<div class="dog">DOG</div>
 
 
 	</div>
@@ -68,7 +39,9 @@ Change CSS to make it disappear -->
 </div><!-- End Container-Fluid -->
 
 <footer>
-	<div>&copy;<span id="Year"></span> Doberman on Graphics</div>
+	<site-footer>
+		<!-- Footer -->
+	</site-footer>
 </footer>
 
 <script	src="./resources/js/index.js"></script>
