new file:   resources/images/DOGlogo.afdesign 	new file:   resources/images/DOGlogo2.svg 	new file:   resources/images/DOGlogo3.svg 	modified:   sandbox.html

--- a/branding.html
+++ b/branding.html
@@ -24,15 +24,15 @@
 
 <div class="top-container">
 	<div class="top-grid">
-		<div class="grid1">1</div>
-		<div>2</div>
-		<div class="grid3">3</div>
-		<div>4</div>
-		<div>5</div>
-		<div>6</div>
-		<div class="grid7">7</div>
-		<div>8</div>
-		<div class="grid9">9</div>
+		<div class="grid-box grid1">1</div>
+		<div class="grid-box">2</div>
+		<div class="grid-box grid3">3</div>
+		<div class="grid-box">4</div>
+		<div class="grid-box">5</div>
+		<div class="grid-box">6</div>
+		<div class="grid-box grid7">7</div>
+		<div class="grid-box">8</div>
+		<div class="grid-box grid9">9</div>
 	</div>
 	<div class="top-text">
 		<h1>Branding</h1>
@@ -61,31 +61,10 @@ Typography has always been an interest of mine, well before my career in the gra
 	</div>
 </div>
 
+<div class="div-wrap">
+<div class="parallax"></div>
+</div>
 
-
-	<h1>Branding</h1>
-
-<p>	
-Branding can convey the core focus, or the breadth of and industry, and the culture and attitude in a retail or service environment.
-</p>
-<p>
-It attracts through connection in attituded or  
-</p>
-<p>
-A powerful tool that communicates information and builds a relationship with the consumer. 
-</p>
-<p>
-Good design is inviting, and steers outward perception by projecting an esthetic that leaves an impression.
-</p>
-<p>
-A well thought-out logo reproduces properly through a variety of different media. 
-</p>
-<p>
-Most of these designs are custom letterforms, created for a specific application, and have been published.
-</p>
-<p>
-Typography has always been an interest of mine, well before my career in the graphic arts industry. I'm the type of guy that can stare at a menu for twenty minutes, and not know what to order because I wasn't actually reading it, or rewind just the end credits of a movie. I am part of the Letraset generation, and born with an Xacto blade in one hand and a Sharpie in the other. 
-</p>
 
 <h2>Doberman on Graphics (DoG)</h2>
 <p>
