--- a/index.html
+++ b/index.html
@@ -17,17 +17,15 @@
 </header>
 
 <div class="container-fluid">
-
-<!-- Change top to adjust position. 
-Change CSS to make it disappear -->
-<div style="top: 100px; right: 60px;" id="viewport-size"></div>
+	<div id="viewport-size"></div>
 
 <main>
+	<div class="top-buffer"></div>
 
 	<div class="container">
 
-	<h1><span class="tik">&#161;</span>&nbspEverything is&nbspArt
-		<br><span class="hide">&nbsp;&nbsp;</span>Art&nbspis Everything&nbsp<span class="tik">!</span>
+	<h1><span class="tik">!</span>&nbspEverything is&nbspArt
+		<br><span class="hide">&nbsp;&nbsp;</span>Art&nbspis Everything&nbsp!
 
 	</h1>
 		<p>Design, Color, and Composition are everywhere we look. Whether it has been carefully curated, or stumbling upon simple beauty. 	
