--- a/sandbox.html
+++ b/sandbox.html
@@ -7,6 +7,22 @@
 	<link rel="stylesheet" href="./resources/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./resources/css/index.css">
 	<link rel="icon" type="image/svg" href="resources/images/favicon.svg"> 
+
+	<style>
+		.dog {
+			font-family: "Aachen"; 
+			color: black;
+			font-size: 4rem;
+			text-align: center;
+			transform: scaleX(2.85);
+			transform-origin: center center;  
+			margin-bottom: -50%;
+			letter-spacing: -1rem;
+			-webkit-text-stroke: 1px white;
+		}	
+
+	</style>
+
 </head>
 <body>
 
