--- a/branding.html
+++ b/branding.html
@@ -7,6 +7,10 @@
 	<link rel="stylesheet" href="./resources/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./resources/css/index.css">
 	<link rel="icon" type="image/svg" href="resources/images/favicon.svg"> 
+
+
+
+
 </head>
 <body>
 
@@ -22,70 +26,88 @@
 
 <main>
 
-<div class="top-container">
-	<div class="top-grid">
-		<div class="grid-box grid1">1</div>
-		<div class="grid-box">2</div>
-		<div class="grid-box grid3">3</div>
-		<div class="grid-box">4</div>
-		<div class="grid-box">5</div>
-		<div class="grid-box">6</div>
-		<div class="grid-box grid7">7</div>
-		<div class="grid-box">8</div>
-		<div class="grid-box grid9">9</div>
-	</div>
-	<div class="top-text">
-		<h1>Branding</h1>
+	<div class="top-container">
 
-<p>	
-Branding can convey the core focus, or the breadth of and industry, and the culture and attitude in a retail or service environment.
-</p>
-<p>
-It attracts through connection in attituded or  
-</p>
-<p>
-A powerful tool that communicates information and builds a relationship with the consumer. 
-</p>
-<p>
-Good design is inviting, and steers outward perception by projecting an esthetic that leaves an impression.
-</p>
-<p>
-A well thought-out logo reproduces properly through a variety of different media. 
-</p>
-<p>
-Most of these designs are custom letterforms, created for a specific application, and have been published.
-</p>
-<p>
-Typography has always been an interest of mine, well before my career in the graphic arts industry. I'm the type of guy that can stare at a menu for twenty minutes, and not know what to order because I wasn't actually reading it, or rewind just the end credits of a movie. I am part of the Letraset generation, and born with an Xacto blade in one hand and a Sharpie in the other. 
-</p>
-	</div>
-</div>
+		<div class="top-grid">
+			<div class="grid-box grid1"><a href="#Project1"></a></div>
+				<style>.grid1{background-image: url(./resources/images/illustration/ill_ems-sm.jpg);} </style>
+			<div class="grid-box grid2"><a href="#Project2"></a></div>
+				<style>.grid2{background-image: url(./resources/images/illustration/ill_ems-sm.jpg);} </style>
+			<div class="grid-box grid3"><a href="#Project3"></a></div>
+				<style>.grid3{background-image: url(./resources/images/illustration/ill_ems-sm.jpg);} </style>
+			<div class="grid-box grid4"><a href="#Project4"></a></div>
+				<style>.grid4{background-image: url(./resources/images/illustration/ill_ems-sm.jpg);} </style>
+			<div class="grid-box grid5"><a href="#Project5"></a></div>
+				<style>.grid5{background-image: url(./resources/images/illustration/ill_ems-sm.jpg);} </style>
+			<div class="grid-box grid6"><a href="#Project6"></a></div>
+				<style>.grid6{background-image: url(./resources/images/illustration/ill_ems-sm.jpg);} </style>
+			<div class="grid-box grid7"><a href="#Project7"></a></div>
+				<style>.grid7{background-image: url(./resources/images/illustration/ill_ems-sm.jpg);} </style>
+			<div class="grid-box grid8"><a href="#Project8"></a></div>
+				<style>.grid8{background-image: url(./resources/images/illustration/ill_ems-sm.jpg);} </style>
+			<div class="grid-box grid9"><a href="#Project9"></a></div>
+				<style>.grid9{background-image: url(./resources/images/illustration/ill_ems-sm.jpg);} </style>
+		</div>
+
+		<div class="top-text">
+			<h1>Branding</h1>
+
+			<p>	
+			Branding can convey the core focus, or the breadth of and industry, and the culture and attitude in a retail or service environment.
+
+			It attracts through connection in attituded or  
+
+			A powerful tool that communicates information and builds a relationship with the consumer. 
+
+			Good design is inviting, and steers outward perception by projecting an esthetic that leaves an impression.
+
+			A well thought-out logo reproduces properly through a variety of different media. 
+
+			Most of these designs are custom letterforms, created for a specific application, and have been published.
+
+			Typography has always been an interest of mine, well before my career in the graphic arts industry. I'm the type of guy that can stare at a menu for twenty minutes, and not know what to order because I wasn't actually reading it, or rewind just the end credits of a movie. I am part of the Letraset generation, and born with an Xacto blade in one hand and a Sharpie in the other. 
+			</p>
+		</div>
+
+	</div> <!-- end top-container -->
 
 <div class="div-wrap">
 <div class="parallax"></div>
 </div>
 
 
-<h2>Doberman on Graphics (DoG)</h2>
+	<section id="Project4" class="project-content">
+		<figure class="project-img">
+			<img src="./resources/images/illustration/ill_ems.jpg" alt="" loading="lazy">
+		</figure>
+		<article class="project-text">	
+			<h2>Desert Radio Group</h2>
+			<p>
+				The five antennae represent the five broadcasts coverage areas. The hills show the actual valley pass. Concentric rings echo the physical radio waves, in a blue sky.
+			</p>
+		</article>
+	</section>	
+
+
+
+
+<h2 id="Project1">Doberman on Graphics (DoG)</h2>
 <p>
-	This was the header of my original portfolio site.
-</p>
-<p>
-	The elongated letterform run together, to echo the chain. The red favicon has a bite out of the corner, mimicking the folded corner of a document icon. 
+	The elongated letterform run together, to echo the chain. The red icon has a bite out of the corner, mimicking the folded corner of a document icon. 
 </p>
 
-<h2>Tamale Festival</h2>
+<h2 id="Project2">Tamale Festival</h2>
 <p>
-	This design utilizes chili peppers and corn husks to form the letters, with arched type symbolizing the sun. The use of green and red are ties to the Mexican flag, the Hispanic nature of our local community, and of the festival itself.
+	This design uses chili peppers and corn husks to form the letters, with arched type symbolizing the sun. The use of green and red are ties to the Mexican flag, the Hispanic culture of our local community, and of the festival itself.
 </p>
 <p>
-Done as a entry into a design competition, which won from a field of over two hundred submissions. It was turned into an official postage cancellation mark for the Indio Post Office, during the month of December. 
+	Done as a entry into a design competition, which won from a field of over two hundred submissions. It was turned into an official postage cancellation mark for the Indio Post Office, during the month of December. 
 </p>
 <p>
 	The logo was retired last year, after a nearly twenty year run. The festival has been turned over to a production company, and their new logo sucks!
 </p>
 
-<h2>Threee Books</h2>
+<h2 id="Project3">Threee Books</h2>
 <p>
 	This was done for my bookstore in Old Town Pasadena, in the backroom of The Espresso Bar. The thinking was that these books themselves were, at the very least, third-hand, and how to exaggerate that.
 	The tag line was: "One to Threee for Books".  
@@ -94,7 +116,7 @@ Done as a entry into a design competition, which won from a field of over two hu
 	Done in appreciation of old-style numerals. The number is implied by the triangles, and the visual void of the number. Reinforcing of the name of the bookstore, called "Threee". The color used is that of roasted coffee, and the extra "e" also represents the coffee from The Espresso Bar. Triple shot !
 </p>
 
-<h2>Desert Radio Group</h2>
+<h2 id="Project4">Desert Radio Group</h2>
 <p>
 	The five antennae represent the five broadcasts coverage areas. The hills show the actual valley pass. Concentric rings echo the physical radio waves, in a blue sky. 
 </p>
@@ -102,7 +124,7 @@ Done as a entry into a design competition, which won from a field of over two hu
 	The cities listed below are the five markets they serve.  After the deregulation of the industry, the Morris Publishing Group bought many stations a few of which were my clients. 
 </p>
 
-<h2>GaärD</h2>
+<h2 id="Project5">GaärD</h2>
 <p>	
 	This was developed for an umbrella corporation to encompass all other operations. Extensions of the terminal letters create a physical boundary, that implies the protective function of the entity.
 </p>
@@ -110,7 +132,7 @@ Done as a entry into a design competition, which won from a field of over two hu
 	The umlaut invokes the Old Norse origin of the family name. Though not grammatically correct, it works phonetically, and included for affect. 
 </p>
 
-<h2>MAGnet Gallery</h2>
+<h2 id="Project6">MAGnet Gallery</h2>
 <p>	
 	MAGnet (Miles Avenue Gallery Network) was a non-profit community based exhibit space, run by an all volunteer staff of artists and community leaders. I was an original founder and board member, and appointed as the Art Director. 
 </p>
@@ -121,7 +143,7 @@ Done as a entry into a design competition, which won from a field of over two hu
 	I also provided all printed collateral and promotional material, at no charge. 
 </p>
 
-<h2>Little Giant Printers</h2>
+<h2 id="Project7">Little Giant Printers</h2>
 <p>
 	This updated design for Little Giant Printers. The bevel and highlight effects create a three-dimensional appearance which is emphasized by the drop-shadow. 
 </p>
@@ -133,7 +155,7 @@ Done as a entry into a design competition, which won from a field of over two hu
 </p>
 <br>
 
-<h2>Molokaʻi Partners</h2>
+<h2 id="Project8">Molokaʻi Partners</h2>
 <p>
 	The letterforms invoke a polynesian theme and is similar to early Hawaiian petroglyphs signifying a boat sail. The same basic shape is repeated to create the primitive feel of cuneiform based writing. The color and texture are meant to reflect roasted coffee and the burlap sack in which beans are packaged for wholesale.  
 </p>
@@ -141,7 +163,7 @@ Done as a entry into a design competition, which won from a field of over two hu
 	This design was done for a start-up coffee company on Molokai. Because of the overwhelming market presence of Kona Coffee, there were no significant farms on other islands. The land use for sugar and pineapple had become less profitable and this successful plantation was soon brought under the corporate umbrella of Coffees of Hawaii.
 </p>
 
-<h2>In Like Flint</h2>
+<h2 id="Project9">In Like Flint</h2>
 <p>
 	This is the evil secret-society from the "Flint" series of spy movies, filmed in the sixties. 
 </p>
