deleted:    branding.html 	new file:   draw.html 	deleted:    illustration.html 	modified:   index.html 	new file:   logo.html 	renamed:    photography.html -> photo.html 	modified:   resources/css/index.css 	renamed:    resources/images/illustration/ill_ems-sm.jpg -> resources/images/draw/draw_ems-sm.jpg 	renamed:    resources/images/illustration/ill_ems.jpg -> resources/images/draw/draw_ems.jpg 	new file:   resources/images/draw/draw_ems2.jpg 	new file:   resources/images/draw/draw_farmer.jpg 	new file:   resources/images/draw/draw_ganesha.jpg 	new file:   resources/images/draw/draw_guess.jpg 	new file:   resources/images/draw/draw_mission.jpg 	new file:   resources/images/draw/draw_mouse.jpg 	new file:   resources/images/draw/draw_pencil.jpg 	new file:   resources/images/draw/draw_riquelle.jpg 	new file:   resources/images/draw/draw_three.jpg 	new file:   resources/images/draw/framestrips.gif 	new file:   resources/images/logo/dsn_thermos.jpg 	new file:   resources/images/logo/logo_desertradio.jpg 	new file:   resources/images/logo/logo_gaard.jpg 	new file:   resources/images/logo/logo_indio.jpg 	new file:   resources/images/logo/logo_lgpold.jpg 	new file:   resources/images/logo/logo_littlegiant.jpg 	new file:   resources/images/logo/logo_magnet.jpg 	new file:   resources/images/logo/logo_molokai.jpg 	new file:   resources/images/logo/logo_tamale.jpg 	new file:   resources/images/logo/logo_threee.jpg 	new file:   resources/images/logo/logo_zowie.jpg 	modified:   resources/js/index.js

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div id="viewport-size"></div>
 
 <main>
-	<div class="top-buffer"></div>
+	<div class="page-buffer"></div>
 
 	<div class="container">
 
