modified:   draw.html 	modified:   logo.html 	modified:   resources/css/index.css 	renamed:    resources/images/draw/draw_riquelle.jpg -> resources/images/draw/draw-watercolor.jpg 	modified:   resources/images/draw/draw_ems.jpg 	deleted:    resources/images/draw/draw_ems2.jpg 	renamed:    resources/images/draw/draw_mouse.jpg -> resources/images/draw/draw_mascot.jpg 	modified:   resources/js/index.js

--- a/logo.html
+++ b/logo.html
@@ -65,7 +65,7 @@
 </div>
 
 	<section id="tamale" class="project-content">
-		<figure class="project-img horz">
+		<figure class="project-img">
 			<img src="./resources/images/logo/logo_tamale.jpg" alt="Tamale Festival Logo" loading="lazy">
 		</figure>
 		<article class="project-text">	
@@ -87,7 +87,7 @@
 </div>
 
 	<section id="magnet" class="project-content">
-		<figure class="project-img horz">
+		<figure class="project-img">
 			<img src="./resources/images/logo/logo_magnet.jpg" alt="Magnet Gallery Logo" loading="lazy">
 		</figure>
 		<article class="project-text">	
@@ -109,7 +109,7 @@
 </div>
 
 	<section id="desertradio" class="project-content">
-		<figure class="project-img horz">
+		<figure class="project-img">
 			<img src="./resources/images/logo/logo_desertradio.jpg" alt="Desert Radio Group Logo" loading="lazy">
 		</figure>
 		<article class="project-text">	
@@ -128,7 +128,7 @@
 </div>
 
 	<section id="molokai" class="project-content">
-		<figure class="project-img horz">
+		<figure class="project-img">
 			<img src="./resources/images/logo/logo_molokai.jpg" alt="Molokaʻi Partners Logo" loading="lazy">
 		</figure>
 		<article class="project-text">	
@@ -147,7 +147,7 @@
 </div>
 
 	<section id="threeebooks" class="project-content">
-		<figure class="project-img horz">
+		<figure class="project-img">
 			<img src="./resources/images/logo/logo_threee.jpg" alt="Threee Books Logo" loading="lazy">
 		</figure>
 		<article class="project-text">	
@@ -167,7 +167,7 @@
 </div>
 
 	<section id="gaard" class="project-content">
-		<figure class="project-img horz">
+		<figure class="project-img">
 			<img src="./resources/images/logo/logo_gaard.jpg" alt="GaärD Logo" loading="lazy">
 		</figure>
 		<article class="project-text">	
@@ -186,7 +186,7 @@
 </div>
 
 	<section id="littlegiant" class="project-content">
-		<figure class="project-img horz">
+		<figure class="project-img">
 			<img src="./resources/images/logo/logo_littlegiant.jpg" alt="Little Giant Printers Logo" loading="lazy">
 		</figure>
 		<article class="project-text">	
@@ -208,7 +208,7 @@
 </div>
 	
 	<section id="doberman" class="project-content">
-		<figure class="project-img vert">
+		<figure class="project-img">
 			<img src="./resources/images/logo/dsn_thermos.jpg" alt="Doberman on Graphics Logo" loading="lazy">
 		</figure>
 		<article class="project-text">	
@@ -224,13 +224,16 @@
 </div>
 
 	<section id="zowie" class="project-content">
-		<figure class="project-img horz">
+		<figure class="project-img">
 			<img src="./resources/images/logo/logo_zowie.jpg" alt="Zowie Logo" loading="lazy">
 		</figure>
 		<article class="project-text">	
 			<h2>Zowie</h2>
 			<p>
-				This is the evil secret-society from the "Flint" series of spy movies, filmed in the sixties. 
+				<!--Zonal Oraganization of Wasteland Immigrants.-->
+				The <u>Z</u>onal <u>O</u>rganization of <u>W</u>orld <u>I</u>ntellligence and <u>E</u>spionage (ZOWIE). 
+				<br>
+				An evil secret-society from the "Flint" series of spy movies, filmed in the sixties. 
 			</p>
 			<p>
 				This is my interpretation of the logo, with original type treatment. This became an embroidered patch, for my young nephew with the same name. 
