modified:   draw.html 	modified:   index.html 	modified:   resources/css/index.css modified:   resources/images/draw/draw-watercolor.jpg 	modified:   resources/images/draw/draw_guess.jpg 	modified:   resources/images/draw/draw_mascot.jpg 	modified:   resources/images/draw/draw_three.jpg 	modified:   resources/js/index.js

--- a/index.html
+++ b/index.html
@@ -25,14 +25,33 @@
 	<div class="container">
 
 	<h1><span class="tik">!</span>&nbspEverything is&nbspArt
-		<br><span class="hide">&nbsp;&nbsp;</span>Art&nbspis Everything&nbsp!
+		<br>&amp;&nbsp
+		<br>Art is Everything&nbsp!
 
 	</h1>
 		<p>Design, Color, and Composition are everywhere we look. Whether it has been carefully curated, or stumbling upon simple beauty. 	
 		<br>This is a collection of my visual art ..
 		</p>
-	<hr/>	
-	<h2>Portfolio</h2>
+
+	</div>
+
+<div class="divider-wrap">
+	<div class="parallax"></div>
+</div>
+				
+
+	<div class="top-text">
+		<h1>Branding</h1>
+		<p>	
+		logo can convey the core focus, or the breadth of and industry, and the culture and attitude in a retail or service environment.
+		It attracts through connection in attituded or  
+		A powerful tool that communicates information and builds a relationship with the consumer. 
+		Good design is inviting, and steers outward perception by projecting an esthetic that leaves an impression.
+		A well thought-out logo reproduces properly through a variety of different media. 
+		Most of these designs are custom letterforms, created for a specific application, and have been published.
+		Typography has always been an interest of mine, well before my career in the graphic arts industry. I'm the type of guy that can stare at a menu for twenty minutes, and not know what to order because I wasn't actually reading it, or rewind just the end credits of a movie. I am part of the Letraset generation, and born with an Xacto blade in one hand and a Sharpie in the other. 
+		</p>
+	</div>
 
 
 </main>
