--- a/draw.html
+++ b/draw.html
@@ -25,7 +25,7 @@
 	<div class="top-container">
 
 		<div class="top-text">
-			<h1>Illustration</h1>
+			<h1>Illustration</h1>			
 			<p>	
 				I have kept a sketchbook since a very early age. A visual diary 
 				A strong visual vocabulary translates into sitting around the table with people, pushing ideas around on a piece of paper. Creating a half dozen concepts, fleshing out the best ones, and drawing them five times.
@@ -42,15 +42,17 @@
 
 	<section id="framestrips" class="project-content">
 		<figure class="img-float project-img">
-			<img src="./resources/images/draw/framestrips.gif" alt="Hands Illustration" loading="lazy">
+			<img src="./resources/images/draw/framestrips.gif" alt="Hands Illustration">
 		</figure>
 		<article class="project-text">	
 			<h2>Frame Strips</h2>
 			<p>
-				Hands are hard to draw!
+				Visual product instructions for Frame Strips, a local manufacturer.
 			</p>
 			<p>
-				I paid two other people to illustrate these brochure instructions, for Frame Strips, a local manufacturer.
+				Hands are hard to draw!
+
+				I paid two other people to illustrate these brochure 
 				After rejected both, because I knew that I could do better. Buying my first digital camera, and posing for each step in the processes. It ended up being a very expensive solution. But, entirely happy with the outcome and knowledge. 
 			</p>
 		</article>
@@ -60,12 +62,115 @@
 	<div class="parallax"></div>
 </div>
 
-	<section id="mission" class="project-content">
+	<section id="pencil" class="project-content">
 		<figure class="project-img">
-			<img src="./resources/images/draw/draw_mission.jpg" alt="Alcalá Mission Illustration" loading="lazy">
+			<img src="./resources/images/draw/draw_pencil.jpg" alt="Texture Study in Pencil Illustration">
 		</figure>
 		<article class="project-text">	
-			<h2>Alcalá Christmas</h2>
+			<h2>Texture Study</h2>
+			<p>	
+				Pencil in sketchbook. This was done as an assignment, while taking an illustration class at Pasadena City College. 
+
+				The assignment was to draw different metal objects.
+				I combined shinny, matte, and rough tools to create the composition.  
+
+				I wish I had crumbled the butcher paper a little less. The background is distracting.
+					If you zoom-in the detail is quite remarkable. 
+			</p>
+		</article>
+	</section>
+
+<div class="divider-wrap">
+	<div class="parallax"></div>
+</div>
+
+<section id="ems" class="project-content">
+	<figure class="project-img">
+		<img src="./resources/images/draw/draw_ems.jpg" alt="EMS Labs Holiday Illustration">
+	</figure>
+	<article class="project-text">	
+		<h2>Electron Microscopy</h2>
+		<p>
+			Wax Pencil. 
+
+			Done as a holiday greeting for Electron Microscopy Service. They had a very modern logo, but this design abandons that, for a more traditional interpretation of the season. 
+
+			It was well received by both management, and recipients. 
+		</p>
+	</article>
+</section>
+
+<div class="divider-wrap">
+<div class="parallax"></div>
+</div>
+
+	<section id="guess" class="project-content">
+		<figure class="project-img">
+			<img src="./resources/images/draw/draw_guess.jpg" alt="Cowgirl Portrait Illustration">
+		</figure>
+		<article class="project-text">	
+			<h2>Guess Who</h2>
+			<p>				
+				This was based on a Guess photo advertisement, that featured a woman that looked a lot like one of my first loves. It's a sketchbook entry in pencil, with some features changed to look more like the tomboy I was in love with. 
+
+				Lindsay, the Volvo is still running great.
+				Thank you so much! Props to your Pops. 
+			</p>
+		</article>
+	</section>
+
+<div class="divider-wrap">
+	<div class="parallax"></div>
+</div>	
+
+	<section id="watercolor" class="project-content">
+		<figure class="project-img">
+			<img src="./resources/images/draw/draw-watercolor.jpg" alt="Cowgirl Portrait Illustration">
+		</figure>
+		<article class="project-text">	
+			<h2>Watercolor</h2>
+			<p>				
+				Blah. 
+			</p>
+		</article>
+	</section>
+
+
+
+<div class="divider-wrap">
+	<div class="parallax"></div>
+</div>
+
+	<section id="ganesha" class="project-content">
+		<figure class="project-img">
+			<img src="./resources/images/draw/draw_ganesha.jpg" alt="Ganesha Statue Illustration">
+		</figure>
+		<article class="project-text">	
+			<h2>Ganesha Statue</h2>
+			<p>
+				Pen & Ink. 
+
+				The Norton Simon admitted patrons for free once a month. A group of friends would regularly roam the galleries. On one of these trips I sat on the floor of the Eastern Room, and started to sketch. 
+
+				It became a Valentine, with a quote from the Ramayana inside.
+				We where both reading Eastern literature. My life is deeply richer for that.
+				Rama and Sita where at the center of that of that writing. 
+
+				I own over thirty volumes of the Arabian Nights now. I can only attribute that to a person that I never felt I would ever lose touch. If Katherine hears this, please know that my library is hers'.  
+			</p>
+		</article>
+	</section> 
+
+<div class="divider-wrap">
+	<div class="parallax"></div>
+</div> 
+
+	<section id="mission" class="project-content">
+		<figure class="project-img">
+			<img src="./resources/images/draw/draw_mission.jpg" alt="Alcalá Mission Illustration">
+		</figure>
+		<article class="project-text">	
+			<h2>Alcalá Mission</h2>
 			<p>
 				Wax pencil illustration, for a holiday card.
 				Basilica de Alcalá is i
@@ -79,54 +184,32 @@
 	<div class="parallax"></div>
 </div>
 
-	<section id="pencil" class="project-content">
+	<section id="mascot" class="project-content">
 		<figure class="project-img">
-			<img src="./resources/images/draw/draw_pencil.jpg" alt="Texture Study in Pencil Illustration" loading="lazy">
+			<img src="./resources/images/draw/draw_mascot.jpg" alt="Mouse Mascot Illustration">
 		</figure>
 		<article class="project-text">	
-			<h2>Surface Study</h2>
+			<h2>Auto Group Mascot</h2>
 			<p>	
-				Pencil in sketchbook. This was done as an assignment, while taking an illustration class at Pasadena City College. 
+				A lot of time was spent for this mouse concept, on spec. Comparing other mouse drawings in the media. Finally realizing I was that mouse, wanting to drive home in a new Maita!
+				Created to be culturally indistinct, and sort of ageless (okay, maybe it's me in that sportscar). 
 
-				The assignment was to draw different metal objects.
-				I combined shinny, matte, and rough tools to create the composition.  
-
-				I wish I had crumbled the butcher paper a little less. The background is distracting.
-				If you zoom-in the detail is quite remarkable. 
-			</p>
-		</article>
-	</section>	
-	
-<div class="divider-wrap">
-	<div class="parallax"></div>
-</div>
-
-	<section id="ems" class="project-content">
-		<figure class="project-img">
-			<img src="./resources/images/draw/draw_ems.jpg" alt="EMS Labs Holiday Illustration" loading="lazy">
-		</figure>
-		<article class="project-text">	
-			<h2>Microscopy Holiday</h2>
-			<p>
-				Wax Pencil. 
-
-				Done as a holiday greeting for Electron Microscopy Service. They had a very modern logo, but this design abandons that, for a more traditional interpretation of the season. 
-
-				It was well received by both management, and recipients. 
-			</p>
+				When presenting to the owner, he took out a rubber stamp from the drawer, of a Disney knockoff image.
+				I could have worked with that, but I declined to develop further. The difference was stark, and they refused to pay for my previous time. Goodbye.  
+			</p>		
 		</article>
 	</section>
 
 <div class="divider-wrap">
 	<div class="parallax"></div>
 </div>
-
+	
 	<section id="threee" class="project-content">
 		<figure class="project-img">
 			<img src="./resources/images/draw/draw_three.jpg" alt="Arab with Books Illustration" loading="lazy" class="img-border">
 		</figure>
 		<article class="project-text">	
-			<h2>Threee</h2>
+			<h2>Threee Books</h2>
 			<p>
 				- A Well Used Bookstore 
 				This is the base flyer artwork for my bookstore, and independent zine newsstand.
@@ -148,72 +231,9 @@
 	<div class="parallax"></div>
 </div>
 
-	<section id="guess" class="project-content">
-		<figure class="project-img">
-			<img src="./resources/images/draw/draw_guess.jpg" alt="Cowgirl Portrait Illustration" loading="lazy">
-		</figure>
-		<article class="project-text">	
-			<h2>Guess Who</h2>
-			<p>				
-				This was based on a Guess photo advertisement, that featured a woman that looked a lot like one of my first loves. It's a sketchbook entry in pencil, with some features changed to look more like the tomboy I was in love with. 
-
-				Lindsay, the Volvo is still running great.
-				Thank you so much! Props to your Pops. 
-			</p>
-		</article>
-	</section>
-	
-<div class="divider-wrap">
-	<div class="parallax"></div>
-</div>
-
-	<section id="mascot" class="project-content">
-		<figure class="project-img">
-			<img src="./resources/images/draw/draw_mascot.jpg" alt="Mouse Mascot Illustration" loading="lazy">
-		</figure>
-		<article class="project-text">	
-			<h2>Mascot - Auto Group</h2>
-			<p>	
-				A lot of time was spent for this mouse concept, on spec. Comparing other mouse drawings in the media. Finally realizing I was that mouse, wanting to drive home in a new Maita!
-				Created to be culturally indistinct, and sort of ageless (okay, maybe it's me in that sportscar). 
-
-				When presenting to the owner, he took out a rubber stamp from the drawer, of a Disney knockoff image.
-				I could have worked with that, but I declined to develop further. The difference was stark, and they refused to pay for my previous time. Goodbye.  
-			</p>		
-		</article>
-	</section>
-
-<div class="divider-wrap">
-	<div class="parallax"></div>
-</div>
-	
-	<section id="ganesha" class="project-content">
-		<figure class="project-img">
-			<img src="./resources/images/draw/draw_ganesha.jpg" alt="Ganesha Statue Illustration" loading="lazy">
-		</figure>
-		<article class="project-text">	
-			<h2>Ganesha Valentine</h2>
-			<p>
-				Pen & Ink. 
-
-				The Norton Simon admitted patrons for free once a month. A group of friends would regularly roam the galleries. On one of these trips I sat on the floor of the Eastern Room, and started to sketch. 
-
-				It became a Valentine, with a quote from the Ramayana inside.
-				We where both reading Eastern literature. My life is deeply richer for that.
-				Rama and Sita where at the center of that of that writing. 
-
-				I own over thirty volumes of the Arabian Nights now. I can only attribute that to a person that I never felt I would ever lose touch. If Katherine hears this, please know that my library is hers'.  
-			</p>
-		</article>
-	</section>
-
-<div class="divider-wrap">
-	<div class="parallax"></div>
-</div>
-
 	<section id="farmer" class="project-content">
 		<figure class="project-img">
-			<img src="./resources/images/draw/draw_farmer.jpg" alt="Ganesha Statue Illustration" loading="lazy">
+			<img src="./resources/images/draw/draw_farmer.jpg" alt="Ganesha Statue Illustration">
 		</figure>
 				Graphite pencil, in my sketchbook, on spec. 
 				
